--- a/android/build.gradle
+++ b/android/build.gradle
@@ -19,3 +19,10 @@ subprojects {
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
+
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
