--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,60 +10,59 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  stacked: ^3.4.2
   mask_text_input_formatter: ^2.9.0
-  flutter_svg: ^2.0.10+1
-  dio: ^5.4.2+1
-  flutter_secure_storage: ^9.0.0
-  http: ^1.2.1
-  json_annotation: ^4.8.1
-  url_launcher: ^6.2.5
-  file_picker: ^8.0.0+1
-  open_file: ^3.3.2
+  flutter_svg: ^2.0.16
+  dio: ^5.7.0
+  flutter_secure_storage: ^9.2.2
+  http: ^1.2.2
+  json_annotation: ^4.9.0
+  url_launcher: ^6.3.1
+  file_picker: ^8.1.4
+  open_file: ^3.5.10
   flutter_typeahead: ^5.2.0
-  html: ^0.15.4
-  cupertino_icons: ^1.0.6
-  webview_flutter: ^4.7.0
-  translit: ^2.0.1
-  image_picker: ^1.0.7
-  intl: ^0.19.0
-  dropdown_search: ^5.0.6
-  flutter_launcher_icons: ^0.13.1
-  shared_preferences: ^2.2.2
-  audioplayers: ^6.0.0
-  video_player: ^2.8.5
-  appmetrica_plugin: ^2.1.1
-  photo_view: ^0.14.0
-  socket_io_client: ^2.0.3+1
-  flutter_bloc: ^8.1.5
-  equatable: ^2.0.5
-  get_it: ^7.6.8
-  flutter_local_notifications: ^17.0.0
+  html: ^0.15.5
+  cupertino_icons: ^1.0.8
+  webview_flutter: ^4.10.0
+  translit: ^2.0.2
+  image_picker: ^1.1.2
+  intl: ^0.20.1
+  dropdown_search: ^6.0.1
+  flutter_launcher_icons: ^0.14.2
+  shared_preferences: ^2.3.3
+  audioplayers: ^6.1.0
+  video_player: ^2.9.2
+  appmetrica_plugin: ^3.1.0
+  photo_view: ^0.15.0
+  socket_io_client: ^3.0.2
+  flutter_bloc: ^8.1.6
+  equatable: ^2.0.7
+  get_it: ^8.0.2
+  flutter_local_notifications: ^18.0.1
   badges: ^3.1.2
-  package_info_plus: ^7.0.0
+  package_info_plus: ^8.1.1
   flutter_pw_validator: ^1.6.0
   provider: ^6.1.2
   flutter_polls: ^0.1.6
-  uuid: ^4.4.0
+  uuid: ^4.5.1
   permission_handler: ^11.3.1
-  in_app_review: ^2.0.9
-  go_router: ^13.2.3
-  youtube_player_flutter: ^9.0.0
+  in_app_review: ^2.0.10
+  go_router: ^14.6.2
+  youtube_player_flutter: ^9.1.1
   device_info_plus:
-  firebase_core: ^2.30.1
-  firebase_messaging: ^14.9.1
-  firebase_analytics: ^10.10.4
-  flutter_cache_manager: ^3.3.2
-  pdf: ^3.3.0
-  path_provider: ^2.0.11
+  firebase_core: ^3.8.1
+  firebase_messaging: ^15.1.6
+  firebase_analytics: ^11.3.6
+  flutter_cache_manager: ^3.4.1
+  pdf: ^3.11.1
+  path_provider: ^2.1.5
 
 dev_dependencies :
   flutter_test:
     sdk: flutter
-  build_runner: ^2.4.9
-  flutter_lints: ^3.0.2
-  freezed: ^2.5.1
-  json_serializable: ^6.7.1
+  build_runner: ^2.4.13
+  flutter_lints: ^5.0.0
+  freezed: ^2.5.7
+  json_serializable: ^6.9.0
 
 flutter:
   uses-material-design: true
